--- a/index.html
+++ b/index.html
@@ -50,20 +50,21 @@
     <p class="content-p">    Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +-10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.  </p>
     <div class="recipe">
       <ul class="recipeLeft">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1 1/2 cups milk</li>
+        <li>1/2 cup mascarpone</li>
+        <li>tsp pink salt</li>
+        <li>1 lb Black Mission Figs</li>
+        <li>1/2 cup brown sugar</li>
+        <li>2-4 tbsp water</li>
       </ul>
       <ul class="recipeRight">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1 1/2 cups heavy cream</li>
+        <li>1/3 granulated sugar</li>
+        <li>2 egg yolks</li>
+        <li>1 lemon, juiced</li>
+        <li>2 tbspn butter</li>
+        <li>1 cup honey roasted pecans, roughly</li>
+        <li>chopped</li>
       </ul>
     </div>
     <hr class="hr"/>
