content added to footer

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div class="footer">
       <img class="foot-img" src="img/van-pic.png" alt="van-pic.png">
       <div class="bio-text">
-        <h3></h3>
-        <p></p>
+        <h3>Vanessa Stevenson</h3>
+        <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
       </div>
       <button class="shareButton">SHARE RECIPE</button>
     </div>
