--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo-image">
-      <img src="img/logo.png">
-      </div>
-      <div class="logo-text">
-        <h3>Delicious</h3>
-        <p>THE BEST FOOD BLOG ON THE WEB</p>
-      </div>
-      <div class="share-lists1">
-      <ul class="social-media-list">
-          <li><img src="img/fb-icon.png"></li>
-          <li><img src="img/twit-icon.png"></li>
-          <li><img src="img/gp-icon.png"></li>
-          <li><img src="img/insta-icon.png"></li>
-          <li><img src="img/flic-icon.png"></li>
-          <li><img src="img/pint-icon.png"></li>
-      </ul>
-      </div>
-      <div class="share-list2">
-      <ul class="rss-mail-list">
-        <li><img src="img/rss-icon.png" alt="rss-icon.png"></li>
-        <li><img src="img/mail-icon.png" alt="mail-icon.png"></li>
-      </ul>
-    </div>
-  </div>
+     <div class="logo-image">
+     <img src="img/logo.png" alt="logo.png">
+     </div>
+     <div class="logo-text">
+       <h2>Delicious</h2>
+       <p>THE BEST FOOD BLOG ON THE WEB</p>
+     </div>
+     <div class="share-lists-one">
+     <ul class="social-media-list">
+         <li><img src="img/fb-icon.png" alt="fb-icon.png"></li>
+         <li><img src="img/twit-icon.png" alt="twit-icon.png"></li>
+         <li><img src="img/gp-icon.png" alt="gp-icon.png"></li>
+         <li><img src="img/insta-icon.png" alt="insta-icon.png"></li>
+         <li><img src="img/flic-icon.png" alt="flic-icon.png"></li>
+         <li><img src="img/pint-icon.png" alt="pint-icon.png"></li>
+     </ul>
+     </div>
+     <div class="share-list-two">
+     <ul class="rss-mail-list">
+       <li><img src="img/rss-icon.png" alt="rss-icon.png"></li>
+       <li><img src="img/mail-icon.png" alt="mail-icon.png"></li>
+     </ul>
+   </div>
+ </div>
   <div class="content">
     <div class="content-head">
       <div class="content-head-text">
@@ -59,8 +59,8 @@
       </ul>
       <ul class="recipeRight">
         <li></li>
-        <li></li>
-        <li></li>
+        <li class="strike"></li>
+        <li class="strike"></li>
         <li></li>
         <li></li>
         <li></li>
