Fixed merge conflicts.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Delicious Blog - Chocolate Pizza</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/stylesheet1.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>'
     <link href='' rel='stylesheet' type='text/css'>
